<resources>
    <string name="app_name">分秒快递</string>
    <string name="title_home">首页</string>
    <string name="title_scan">扫一扫</string>
    <string name="title_me">个人中心</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">输入手机号</string>
    <string name="prompt_password">输入密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="register">注册</string>
    <string name="title_find_pwd">找回密码</string>
    <string name="ok">确定</string>
    <string name="exit">退出</string>
    <string name="default_1">000****0000</string>
    <string name="query">查询</string>
    <string name="hint_query">输入要查询的运单号</string>
    <string name="my_order">我的派件</string>
    <string name="my_deliver">我的收件</string>
    <string name="query_num">运单查询</string>
    <string name="query_id">格口查询</string>
</resources>
