<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.hsy.express.ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:scaleType="fitCenter"
                            android:src="@mipmap/logo_w"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/app_name"
                            android:textColor="@color/white"
                            android:textSize="20dp"/>
                    </LinearLayout>


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/text_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/slod_gray"
                        android:hint="@string/prompt_phone"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/text_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/slod_gray"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_activity_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/btn_forget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:padding="10dp"
                        android:text="@string/forget_pwd"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"/>

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
