<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.hsy.express.ui.QueryExpressActivity">

    <include layout="@layout/layout_toolbar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/text_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/slod_gray"
            android:hint="@string/hint_query"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btn_query"
            style="?android:textAppearanceSmall"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/query"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/express_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="3dp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
